--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.15.2",
     "hexdump>=3.3",
+    "psycopg2>=2.9.10",
     "sqlmodel>=0.0.24",
 ]
