--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
-    "terminal.integrated.env.windows": {
-      "PYTHONPATH": "${workspaceFolder}"
-    },
-    "terminal.integrated.env.linux": {
-      "PYTHONPATH": "${workspaceFolder}"
-    },
-    "terminal.integrated.env.osx": {
-      "PYTHONPATH": "${workspaceFolder}"
-    }
-  }
+  "terminal.integrated.env.windows": {
+    "PYTHONPATH": "${workspaceFolder}/src"
+  },
+  "terminal.integrated.env.linux": {
+    "PYTHONPATH": "${workspaceFolder}/src"
+  },
+  "terminal.integrated.env.osx": {
+    "PYTHONPATH": "${workspaceFolder}/src"
+  },
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestArgs": ["test"]
+}
